# seo-tld

./: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
backend/: .env  alembic.ini  celery_app.py  client_secret.json  client_secret_tldseo_app.json  envlist.py  generating_refresh_token.py  google-ads.yaml  google_search_debug.html  init_db.py  main.py  prismatic-rock-463415-q2-f3a7fdc153b6.json  pyproject.toml  test.py
backend/alembic/: env.py
backend/alembic/versions/: 10efe198bfa2_updated_audit_model_to_store_all_the_.py  1c1be6395bd3_added_competitor_analysis_table.py  335b38eb660e_add_refresh_token_fields_to_user.py  46bc6191e744_add_reset_password_token_fields_to_user.py  49ae3c4e41c8_added_is_verified_to_user.py  59639abc3d93_add_url_and_timestamp_to_audit_reports.py  7bea06657d73_remove_is_active_from_user.py  984a34fd7bf9_initial.py  98b4e9fbc024_added_auth_provider.py  c6d054c89e08_removed_keyword_rank_model.py  e897c8c5d431_made_changes_in_auditreport_model.py  f73440c090d6_remove_is_active_from_project.py
backend/core/: hashing.py  jwt.py
backend/db/: database.py
backend/db/models/: Schemas.py  __init__.py  auditReport.py  auditRequest.py  auditResult.py  competitorAnalysis.py  keyword.py  keywordRanking.py  pageSpeedData.py  project.py  user.py
backend/endpoints/: audit.py  auth.py  competitor_analysis.py  keyword.py  project.py  user.py
backend/services/: AuditService.py  CompetitorAnalysisService.py  EmailService.py  KeywordGenerationService.py  PageSpeedService.py  long_tail_keyword_service.py  test_pagespeed_api.py
backend/tasks/: audit_tasks.py  competitor_analysis_tasks.py  keyword_tasks.py
frontend/: .env  .gitignore  example-audit.json  package.json  pnpm-lock.yaml  prompt.json  vite.config.ts
frontend/src/: App.tsx  index.css  typing.ts
frontend/src/components/: AuditLoadingScreen.tsx  ConfirmationDialog.tsx  DashboardLoadingScreen.tsx  LoadingScreen.tsx  Navbar.tsx  ProjectCard.tsx  Sidebar.tsx
frontend/src/components/audit/: AuditHistoryTable.tsx  AuditPerformanceChart.tsx  AuditReportCard.tsx  AuditSummaryStats.tsx  AuditTrendsCharts.tsx  DashboardHeader.tsx  MetricsTrends.tsx  PerformanceHistory.tsx  (+1 more)
frontend/src/pages/: Billing.tsx  CompetitorAnalysis.tsx  Dashboard.tsx  GenerateKeywords.tsx  LongTailKeywords.tsx  NoAudits.tsx  Profile.tsx  Projects.tsx  SavedAnalyses.tsx  SavedKeywords.tsx
frontend/src/store/: projectStore.ts  sidebarStore.ts
frontend/src/ui/: FloatingAstronaut.tsx  FloatingPlanet.tsx  Orbit.tsx  Spotlights.tsx
(+22 files in other folders)
