[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Kashan Haider",email = "hkashan.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "uvicorn (>=0.34.3,<0.35.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "google-api-python-client (>=2.173.0,<3.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "authlib (>=1.6.0,<2.0.0)",
    "starlette (>=0.40.0,<0.47.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "google-ads (>=27.0.0,<28.0.0)",
    "pytrends (>=4.9.2,<5.0.0)",
    "langchain-google-genai (>=2.1.6,<3.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "python-levenshtein (>=0.27.1,<0.28.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "urllib3 (<2.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "nltk (>=3.9.1,<4.0.0)",
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false